tests/invalid/circular_typedef.lang
typedef MyType MyType;

func main() {

}
